# LI_Reply_Generator

./: .env.example  .gitignore  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml  streamlit_app.py  ui_helpers.py
.github/ISSUE_TEMPLATE/: epic.md  spike.md  story.md
alembic/: env.py
alembic/versions/: 0ce53af38a4f_create_reply_records_table.py  b1a2c3d4e5f6_harden_reply_records_schema.py  c2d3e4f5a6b7_add_engagement_columns.py  d3e4f5a6b7c8_add_engagement_score_columns.py  e4f5a6b7c8d9_create_presets_table.py
backend/app/: main.py
backend/app/core/: errors.py  logging.py  scheduler.py  settings.py
backend/app/db/: base.py  engine.py  migrations.py  session.py
docs/: architecture-baseline.md
pages/: 0_Generate.py  1_History.py  2_Detail.py  3_Presets.py
tests/: test_accessibility_baseline.py  test_approve_api.py  test_architecture_baseline.py  test_clipboard_helper.py  test_db_lifecycle.py  test_delete_record.py  test_detail_view.py  test_dev_commands.py  test_engagement_persistence.py  test_engagement_scoring.py  test_error_normalization.py  test_health.py  test_history_queries.py  test_history_ui.py  test_input_guardrails.py  test_llm_client.py  test_migration_workflow.py  test_new_reply_flow.py  test_post_context_api.py  test_post_context_models.py  test_preset_description.py  test_preset_prompt_mapping.py  test_preset_selection.py  test_presets.py  test_prompt_builder.py  test_ranking.py  test_reply_repository.py  test_score_recomputation.py  test_structured_logging.py  test_ui_states.py  test_unified_settings.py  test_validation.py
(+18 files in other folders)
